# ppeek

./: .gitignore  CLAUDE.md  CODEBASE.md  PKGBUILD  README.md  commit.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
osusayohub/: __main__.py
osusayohub/confighub/: skins.py  window.py
osusayohub/core/: app.py
osusayohub/device/: hid_usage.py  protocol.py  sayodevice.py
osusayohub/input/: tracker.py
osusayohub/osu/: telemetry.py
osusayohub/overlay/: Overlay.qml  bridge.py  main.py  preview.py  theme.py  window.py
packaging/: 99-osusayohub.rules  installer.iss  osusayohub.desktop
ppeek/confighub/: skins.py  window.py
ppeek/overlay/: bridge.py  main.py  preview.py  theme.py  window.py
scripts/: render_screenshots.py
