[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osusayohub"
version = "0.1.0"
description = "osu!lazer overlay (live PP, hit-error/UR meter) and SayoDevice O3C configuration hub"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyQt6>=6.7",
    "qasync>=0.27",
    "websockets>=12.0",
    "evdev>=1.7",
    "hidapi>=0.14",
]

[project.gui-scripts]
osusayohub = "osusayohub.core.app:run"

[tool.setuptools.packages.find]
include = ["osusayohub*"]

[tool.setuptools.package-data]
"osusayohub.overlay" = ["*.qml"]
"osusayohub.assets" = ["fonts/*.ttf", "fonts/OFL*.txt"]
