[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ppeek"
version = "0.5.1"
description = "osu!lazer overlay: live PP, combo, accuracy, hit-error/UR meter, KPS"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyQt6>=6.7",
    "qasync>=0.27",
    "websockets>=12.0",
    "psutil>=5.9",
    "evdev>=1.7; sys_platform == 'linux'",
]

[project.gui-scripts]
ppeek = "ppeek.core.app:run"

[tool.setuptools.packages.find]
include = ["ppeek*"]

[tool.setuptools.package-data]
"ppeek.overlay" = ["*.qml"]
"ppeek.assets" = ["fonts/*.ttf", "fonts/OFL*.txt"]
